--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,9 @@
 body {
-    background-color: black
+    background-color: #000;
+    overflow: hidden;
+}
+
+canvas {
+    width: 100%;
+    height: 100vh;
 }
