--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,6 +1,7 @@
 @font-face{
     font-family: myfont;
-    src: url("/public/fonts/Hack-Bold.ttf");
+    src: url(../fonts/Hack-Bold.ttf);
+    /*src: url("/public/fonts/Hack-Bold.ttf");*/
 }
 body, h1, h2, h3, p, a {
     color: #00ff00;
