--- a/public/css/404.css
+++ b/public/css/404.css
@@ -15,7 +15,7 @@ p {
 h1 {
     font-style: normal;
     font-family: myfont;
-    font-size: 2.75rem;
+    font-size: 2.75em;
 }
 body {
     background-color: #000;
