--- a/public/css/index.css
+++ b/public/css/index.css
@@ -2,6 +2,12 @@ body {
     background-color: #000;
     overflow: hidden;
 }
+body,
+h1 {
+    margin: 0;
+    font-style: normal;
+    font-family: Hack-Bold;
+}
 canvas {
     width: 100%;
     height: 100%;
