--- a/public/css/404.css
+++ b/public/css/404.css
@@ -1,4 +1,4 @@
-@import "./web.fonts/fonts.css";
+@import "../web.fonts/fonts.css";
 
 body, h1, h2, h3, p, a {
     color: #00ff00;
@@ -6,12 +6,12 @@ body, h1, h2, h3, p, a {
 body,
 p {
     font-style: normal;
-    font-family: Hack-Bold;
+    font-family: yiwangqingshen;
     font-size: 1.25rem;
 }
 h1 {
     font-style: normal;
-    font-family: Hack-Bold;
+    font-family: yiwangqingshen;
     font-size: 2.75em;
 }
 body {
