--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,4 +1,14 @@
-@import "../web.fonts/fonts.css";
+@font-face {
+    font-family: "JandaRomantic";
+    src: url("JandaRomantic.woff2") format("woff2"),
+         url("JandaRomantic.woff") format("woff"),
+         url("JandaRomantic.ttf") format("truetype"),
+         url("JandaRomantic.eot") format("embedded-opentype"),
+         url("JandaRomantic.svg") format("svg");
+    font-weight: normal;
+    font-style: normal;
+  }
+
 body {
     background-color: #000;
     overflow: hidden;
