--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,16 +1,113 @@
 @import "../web.fonts/JandaRomantic.css";
 
 body {
+    margin: 0;
+    padding: 0;
     background-color: #000;
     overflow: hidden;
 }
-body,
-h1 {
-    margin: 0;
-    font-style: normal;
-    font-family: JandaRomantic;
-}
+
 canvas {
+    position : absolute;
+    display: block;
     width: 100%;
     height: 100%;
+    top: 0;
+    z-index : -1;
+}
+
+header {
+    width: 100%;
+    text-align: center;
+    background-color: rgba(41, 221, 24, 0.750);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0%;
+    font-style: normal;
+    color: darkmagenta;
+    font-family: JandaRomantic;
+}
+
+.title {
+    width: 100%;
+    margin: 10px;
+    float: left;
+    overflow: hidden;
+    position: relative;
+}
+
+.title ul {
+    clear: left;
+    float: left;
+    position: relative;
+    left: 50%;
+    text-align: center;
+    list-style-type: none;
+    margin: 0%;
+    padding: 0%;
+}
+
+.title li {
+    line-height: 35px;
+    margin: 0 5px;
+    display: block;
+    float: left;
+    position: relative;
+    right: 50%;
+    background-color: rgba(41, 221, 24, 0.750);
+}
+
+.title a {
+    display: block;
+    color: #fff;
+    text-shadow: 1px 0 0 #00189e9c;
+    padding: 0px 10px;
+    border-radius: 2px;
+    box-shadow: 0 1px 0 #292929 inset,0 1px 0 #292929;
+    width: 60px;
+    background: linear-gradient( #00aa00, #540064);
+    text-decoration: none;
+    
+}
+/* .title li:last-child {
+    border-bottom: none;
+} */
+
+/* .title li a.active {
+    color: #f00;
+    background-color: #ff0;
+} */
+
+.title a:hover {
+    text-decoration: none;
+    box-shadow: 0 1px 0 #f9bd71 inset, 0 10px 0 #141311;
+    background: linear-gradient( #f48b03, #945502c4);
+    /* color: #fff;
+    background-color: #f00; */
+}
+
+.section {
+    width: 100%;
+    height: 80%;
+    text-align: center;
+}
+
+.doc {
+    width: auto;
+    color: #fff;
+}
+
+.doc iframe {
+    width: 100%;
+    height: 800px;
+}
+
+footer {
+    width: 100%;
+    height: 100px;
+    position: absolute;
+    bottom: 0;
+    text-align: center;
+    color: #fff;
 }
