--- a/public/css/index.css
+++ b/public/css/index.css
@@ -97,16 +97,17 @@ h1, h2, h3, h4, h5, h6 {
     width: auto;
     height: auto;
     color: #fff;
+    text-align: center;
 }
 
 .doc iframe {
-    width: 100%;
-    min-height: 750px;
+    width: 90%;
+    max-height: 80%;
 }
 
 footer {
     width: 100%;
-    height: 100px;
+    height: 5%;
     position: absolute;
     bottom: 0;
     text-align: center;
