--- a/public/css/404.css
+++ b/public/css/404.css
@@ -11,7 +11,7 @@ p {
 }
 h1 {
     font-style: normal;
-    font-family: yiwangqingshen;
+    font-family: JandaRomantic;
     font-size: 2.75em;
 }
 body {
