--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,5 +1,3 @@
-@import "../web.fonts/JandaRomantic.css";
-
 body {
     margin: 0;
     padding: 0;
@@ -33,58 +31,8 @@ h1, h2, h3, h4, h5, h6 {
     width: 100%;
     margin: 10px;
     float: left;
-    overflow: hidden;
-    position: relative;
-}
-
-.title ul {
-    clear: left;
-    float: left;
-    position: relative;
-    left: 50%;
-    text-align: center;
-    list-style-type: none;
-    margin: 0%;
-    padding: 0%;
-}
-
-.title li {
-    line-height: 35px;
-    margin: 0 5px;
-    display: block;
-    float: left;
-    position: relative;
-    right: 50%;
-    background-color: rgba(41, 221, 24, 0.750);
-}
-
-.title a {
-    display: block;
-    color: #fff;
-    text-shadow: 1px 0 0 #00189e9c;
-    padding: 0px 10px;
-    border-radius: 2px;
-    box-shadow: 0 1px 0 #292929 inset,0 1px 0 #292929;
-    width: 60px;
-    background: linear-gradient( #00aa00, #540064);
-    text-decoration: none;
-    
-}
-/* .title li:last-child {
-    border-bottom: none;
-} */
-
-/* .title li a.active {
-    color: #f00;
-    background-color: #ff0;
-} */
-
-.title a:hover {
-    text-decoration: none;
-    box-shadow: 0 1px 0 #f9bd71 inset, 0 10px 0 #141311;
-    background: linear-gradient( #f48b03, #945502c4);
-    /* color: #fff;
-    background-color: #f00; */
+    font-weight: bold;
+    font-family: JandaRomantic, serif;
 }
 
 .section {
@@ -102,7 +50,9 @@ h1, h2, h3, h4, h5, h6 {
 
 .doc iframe {
     width: 90%;
+    max-width: 950px;
     max-height: 80%;
+    overflow: hidden;
 }
 
 footer {
