--- a/public/css/index.css
+++ b/public/css/index.css
@@ -8,8 +8,6 @@ body {
 canvas {
     position : absolute;
     display: block;
-    width: 100%;
-    height: 100%;
     top: 0;
     z-index : -1;
 }
@@ -24,7 +22,6 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0%;
     font-style: normal;
     color: darkmagenta;
-    font-family: JandaRomantic;
 }
 
 .title {
@@ -32,12 +29,11 @@ h1, h2, h3, h4, h5, h6 {
     margin: 10px;
     float: left;
     font-weight: bold;
-    font-family: JandaRomantic, serif;
 }
 
 .section {
     width: 100%;
-    height: 80%;
+    height: 75%;
     text-align: center;
 }
 
@@ -53,6 +49,7 @@ h1, h2, h3, h4, h5, h6 {
     max-width: 950px;
     max-height: 80%;
     overflow: hidden;
+    position: absolute;
 }
 
 footer {
