--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,8 @@
 body {
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
     background-color: #000;
     overflow: hidden;
 }
@@ -14,33 +16,19 @@ canvas {
 
 header {
     width: 100%;
+    height: auto;
     text-align: center;
-    background-color: rgba(41, 221, 24, 0.750);
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0%;
-    font-style: normal;
-    color: darkmagenta;
-}
-
-.title {
+header, .title {
     width: 100%;
     margin: 10px;
     float: left;
     font-weight: bold;
 }
 
-.section {
-    width: 100%;
-    height: 75%;
-    text-align: center;
-}
 
 .doc {
-    width: auto;
-    height: auto;
-    color: #fff;
     text-align: center;
 }
 
@@ -48,8 +36,7 @@ h1, h2, h3, h4, h5, h6 {
     width: 90%;
     max-width: 950px;
     max-height: 80%;
-    overflow: hidden;
-    position: absolute;
+    text-align: center;
 }
 
 footer {
